index in html link fix

--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
             <img class="background" src="images/background.png" alt="Decorative wavy light-brown backdrop">
             <!-- Navigation menu -->
             <nav class="navigation">
-                <a href="/landing.html">Home</a>
+              <a href="/index.html">Home</a>
                 <a href="/aboutme.html">About Me</a>
                 <a href="/blog.html">Blog</a>
                 <a href="/resume.html">Resume</a>
